--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SG | Software Engineer</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <h1>Welcome !</h1>
+  <h1 class="bg-gray-600">Welcome !</h1>
 </body>
 </html>
